@@ -3,7 +3,7 @@ Section: interpreters
 Priority: optional
 Maintainer: Marek Habersack <grendel@debian.org>
 Standards-Version: 3.6.2.1
-Build-Depends: debhelper (>> 4.0.0), libgdbm-dev, libgmp3-dev, libz-dev, libjpeg-dev, libttf-dev, libmysqlclient10-dev, libreadline-dev, perl, bison, debhelper, freeglut3-dev (>= 2.2.0-6.1) [alpha hppa] | libglut3-dev, freeglut3-dev [!alpha !hppa] | libglut3-dev, xlibmesa-glu-dev | libglu-dev, xlibmesa-gl-dev | libgl-dev, libxpm-dev, gnome-devel, libgtkxmhtml-dev, libfreetype6-dev, autoconf, libiodbc2-dev, libsane-dev, postgresql-dev, librsvg2-dev, libsdl-mixer1.2-dev, libsdl1.2-dev, libperl-dev, sharutils, libpng3-dev, gtkglarea5-dev, libtiff4-dev,  bc, libpcre3-dev, libbz2-dev, libnettle-dev, libsqlite3-dev, libfuse-dev, libhowl-dev, libglade0-dev, fftw3-dev
+Build-Depends: debhelper (>> 4.0.0), libgdbm-dev, libgmp3-dev, libz-dev, libjpeg-dev, libttf-dev, libmysqlclient10-dev, libreadline-dev, perl, bison, debhelper, freeglut3-dev (>= 2.2.0-6.1) [alpha hppa] | libglut3-dev, freeglut3-dev [!alpha !hppa] | libglut3-dev, xlibmesa-glu-dev | libglu-dev, xlibmesa-gl-dev | libgl-dev, libxpm-dev, gnome-devel, libgtkxmhtml-dev, libfreetype6-dev, autoconf, libiodbc2-dev, libsane-dev, postgresql-dev, librsvg2-dev, libsdl-mixer1.2-dev, libsdl1.2-dev, libperl-dev, sharutils, libpng3-dev, gtkglarea5-dev, libtiff4-dev,  bc, libpcre3-dev, libbz2-dev, libnettle-dev, libsqlite3-dev, libfuse-dev, libhowl-dev, libglade0-dev, fftw3-dev, pkg-config
 Build-Conflicts: libutahglx-dev
 
 Package: pike7.7-core
@@ -151,6 +151,13 @@ Description: SQLite module for Pike
  This Pike module enables one to use the SQLite embedded database
  library.
 
+Package: pike7.7-fftw
+Architecture: any
+Depends: ${shlibs:Depends}, pike7.7-core (=${Source-Version})
+Description: Fast Fourier Transform module for Pike
+ This Pike module enables one to use the Fast Fourier Transform
+ library.
+
 Package: pike7.7-dev
 Architecture: all
 Depends: ${shlibs:Depends}
@@ -209,7 +216,7 @@ Description: Pike 7.7 documentation meta package
 
 Package: pike7.7-meta
 Architecture: all
-Depends: pike7.7 (=${Source-Version}), pike7.7-mysql (=${Source-Version}), pike7.7-pg (=${Source-Version}), pike7.7-odbc (=${Source-Version}), pike7.7-image (=${Source-Version}), pike7.7-sdl (=${Source-Version}), pike7.7-gdbm (=${Source-Version}), pike7.7-gtk (=${Source-Version}), pike7.7-gl (=${Source-Version}), pike7.7-sane (=${Source-Version}), pike7.7-doc (=${Source-Version}), pike7.7-dev (=${Source-Version}), pike7.7-perl (=${Source-Version}), pike7.7-svg (=${Source-Version}), pike7.7-pcre (=${Source-Version}), pike7.7-bzip2 (=${Source-Version}), pike7.7-fuse (=${Source-Version}), pike7.7-mdns (=${Source-Version}), pike7.7-sqlite (=${Source-Version})
+Depends: pike7.7 (=${Source-Version}), pike7.7-mysql (=${Source-Version}), pike7.7-pg (=${Source-Version}), pike7.7-odbc (=${Source-Version}), pike7.7-image (=${Source-Version}), pike7.7-sdl (=${Source-Version}), pike7.7-gdbm (=${Source-Version}), pike7.7-gtk (=${Source-Version}), pike7.7-gl (=${Source-Version}), pike7.7-sane (=${Source-Version}), pike7.7-doc (=${Source-Version}), pike7.7-dev (=${Source-Version}), pike7.7-perl (=${Source-Version}), pike7.7-svg (=${Source-Version}), pike7.7-pcre (=${Source-Version}), pike7.7-bzip2 (=${Source-Version}), pike7.7-fuse (=${Source-Version}), pike7.7-mdns (=${Source-Version}), pike7.7-sqlite (=${Source-Version}), pike7.7-fftw (=${Source-Version})
 Description: Meta package for Pike 7.7
  This package depends on all the components that make up the Pike
  language distribution. It will pull in a LOT of packages the
