@@ -1,0 +1,1 @@
+usr/lib/pike/*/lib/modules/_Protocols_DNS_SD.so
